objects/APTS_Master_Picklist_Table__c.object
<CustomObject>
    <description>Object to hold locale wise description for codes (used for incoterm, payment term etc.) used in SAP</description>
    <fields>
        <fullName>APTS_Apttus_OrgId__c</fullName>
        <label>Apttus OrgId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Code_Description__c</fullName>
        <description>Field to hold the description value for code.</description>
        <label>Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Code_Used_For__c</fullName>
        <description>Picklist field to determine that code in the record is being used for what.</description>
        <label>Code Used For</label>
        <picklist>
            <picklistValues>
                <fullName>Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Allocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Guarantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freight Payment Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incoterm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Sales Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Main Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Segmentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mode of Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Method</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penalty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penalty Max</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales District</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP Sales Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Incoterms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Mode of transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Packing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Payment Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Penalty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Penalty Max</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Code__c</fullName>
        <description>Code that is being used in SAP.</description>
        <label>Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Email__c</fullName>
        <description>Field introduced as part of HPALM 8420  - BOL related Sales User management.</description>
        <inlineHelpText>Used to store email address. Introduced for CCP replacement.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>APTS_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_External_System__c</fullName>
        <label>External System</label>
        <picklist>
            <picklistValues>
                <fullName>BOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERP_LN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spine</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Local_Code__c</fullName>
        <description>This field stores the local code value if the global code value is stored in the Code__c field.</description>
        <inlineHelpText>The local code in the case that the code field contains the global code value.</inlineHelpText>
        <label>Local Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Locale__c</fullName>
        <description>Field to hold value of Locale to determine that code and its description is for which locale.</description>
        <label>Locale</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Primary_Master_Picklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Self lookup pointing to the english value(master value) of  the master picklist record</description>
        <label>Master Picklist Translations</label>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>Master Picklist Translations</relationshipLabel>
        <relationshipName>Master_Picklist_Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Reference_Id__c</fullName>
        <description>This field will store the record id of LSOFieldEntries Table record.</description>
        <label>Reference Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Row_Status__c</fullName>
        <label>Row Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Used_By__c</fullName>
        <description>Picklist to differentiate the Master picklist values used by EP and CCP implementations. Implemented as a part of CCP Code Merge.</description>
        <globalPicklist>APTS_Used_By_Implementation</globalPicklist>
        <inlineHelpText>Picklist to differentiate the Master picklist values used by EP and CCP implementations. Implemented as a part of CCP Code Merge.</inlineHelpText>
        <label>Used By</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Master Picklist Table</label>
    <listViews>
        <fullName>APTS_Apttus_All</fullName>
        <columns>NAME</columns>
        <columns>APTS_Code_Used_For__c</columns>
        <columns>APTS_Code__c</columns>
        <columns>APTS_Code_Description__c</columns>
        <columns>APTS_Country__c</columns>
        <columns>APTS_Locale__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Apttus All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_France_Incoterms</fullName>
        <columns>NAME</columns>
        <columns>APTS_Code__c</columns>
        <columns>APTS_Code_Description__c</columns>
        <columns>APTS_Locale__c</columns>
        <columns>APTS_Code_Used_For__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Country__c</field>
            <operation>equals</operation>
            <value>France</value>
        </filters>
        <filters>
            <field>APTS_Code_Used_For__c</field>
            <operation>equals</operation>
            <value>Incoterm</value>
        </filters>
        <label>France Incoterms</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_France_Local_Channels</fullName>
        <columns>NAME</columns>
        <columns>APTS_Code__c</columns>
        <columns>APTS_Code_Description__c</columns>
        <columns>APTS_Locale__c</columns>
        <columns>APTS_Code_Used_For__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Country__c</field>
            <operation>equals</operation>
            <value>France</value>
        </filters>
        <filters>
            <field>APTS_Code_Used_For__c</field>
            <operation>equals</operation>
            <value>Local Channel</value>
        </filters>
        <label>France Local Channels</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_France_Payment_Terms</fullName>
        <columns>NAME</columns>
        <columns>APTS_Code__c</columns>
        <columns>APTS_Code_Description__c</columns>
        <columns>APTS_Locale__c</columns>
        <columns>APTS_Code_Used_For__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Country__c</field>
            <operation>equals</operation>
            <value>France</value>
        </filters>
        <filters>
            <field>APTS_Code_Used_For__c</field>
            <operation>equals</operation>
            <value>Payment Term</value>
        </filters>
        <label>France Payment Terms</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_France_Sales_Office</fullName>
        <columns>NAME</columns>
        <columns>APTS_Code__c</columns>
        <columns>APTS_Code_Description__c</columns>
        <columns>APTS_Locale__c</columns>
        <columns>APTS_Code_Used_For__c</columns>
        <columns>APTS_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Code_Used_For__c</field>
            <operation>equals</operation>
            <value>Sales Office</value>
        </filters>
        <filters>
            <field>APTS_Country__c</field>
            <operation>equals</operation>
            <value>France</value>
        </filters>
        <label>France Sales Office</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_Global_Distribution_Channels</fullName>
        <columns>NAME</columns>
        <columns>APTS_Code__c</columns>
        <columns>APTS_Code_Description__c</columns>
        <columns>APTS_Code_Used_For__c</columns>
        <columns>APTS_Country__c</columns>
        <columns>APTS_Local_Code__c</columns>
        <columns>APTS_Locale__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>APTS_External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Code_Used_For__c</field>
            <operation>equals</operation>
            <value>Distribution Channel</value>
        </filters>
        <filters>
            <field>APTS_Locale__c</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Global Distribution Channels</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_Global_Financial_Guarantee</fullName>
        <columns>NAME</columns>
        <columns>APTS_Code_Used_For__c</columns>
        <columns>APTS_Code__c</columns>
        <columns>APTS_Code_Description__c</columns>
        <columns>APTS_Locale__c</columns>
        <columns>APTS_Country__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Code_Used_For__c</field>
            <operation>equals</operation>
            <value>Financial Guarantee</value>
        </filters>
        <filters>
            <field>APTS_Country__c</field>
            <operation>equals</operation>
            <value>Global</value>
        </filters>
        <label>Global Financial Guarantee</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_Global_Freight_Payment_Terms</fullName>
        <columns>NAME</columns>
        <columns>APTS_Code_Used_For__c</columns>
        <columns>APTS_Code__c</columns>
        <columns>APTS_Code_Description__c</columns>
        <columns>APTS_Locale__c</columns>
        <columns>APTS_Country__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Code_Used_For__c</field>
            <operation>equals</operation>
            <value>Freight Payment Terms</value>
        </filters>
        <filters>
            <field>APTS_Country__c</field>
            <operation>equals</operation>
            <value>Global</value>
        </filters>
        <label>Global Freight Payment Terms</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_Global_Incoterms</fullName>
        <columns>NAME</columns>
        <columns>APTS_Code_Used_For__c</columns>
        <columns>APTS_Code__c</columns>
        <columns>APTS_Code_Description__c</columns>
        <columns>APTS_Locale__c</columns>
        <columns>APTS_Country__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Code_Used_For__c</field>
            <operation>equals</operation>
            <value>Incoterm</value>
        </filters>
        <filters>
            <field>APTS_Country__c</field>
            <operation>equals</operation>
            <value>Global</value>
        </filters>
        <label>Global Incoterms</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_Global_Inside_Sales_Support</fullName>
        <columns>NAME</columns>
        <columns>APTS_Code_Used_For__c</columns>
        <columns>APTS_Code__c</columns>
        <columns>APTS_Code_Description__c</columns>
        <columns>APTS_Local_Code__c</columns>
        <columns>APTS_Locale__c</columns>
        <columns>APTS_Country__c</columns>
        <columns>APTS_Apttus_OrgId__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Code_Used_For__c</field>
            <operation>equals</operation>
            <value>Inside Sales Support</value>
        </filters>
        <filters>
            <field>APTS_Country__c</field>
            <operation>equals</operation>
            <value>Global</value>
        </filters>
        <label>Global Inside Sales Support</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_Global_Mode_of_Transportation</fullName>
        <columns>NAME</columns>
        <columns>APTS_Code_Used_For__c</columns>
        <columns>APTS_Code__c</columns>
        <columns>APTS_Code_Description__c</columns>
        <columns>APTS_Locale__c</columns>
        <columns>APTS_Country__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Code_Used_For__c</field>
            <operation>equals</operation>
            <value>Mode of Transportation</value>
        </filters>
        <filters>
            <field>APTS_Country__c</field>
            <operation>equals</operation>
            <value>Global</value>
        </filters>
        <label>Global Mode of Transportation</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_Global_Packing</fullName>
        <columns>NAME</columns>
        <columns>APTS_Code_Used_For__c</columns>
        <columns>APTS_Code__c</columns>
        <columns>APTS_Code_Description__c</columns>
        <columns>APTS_Locale__c</columns>
        <columns>APTS_Country__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Code_Used_For__c</field>
            <operation>equals</operation>
            <value>Packing</value>
        </filters>
        <filters>
            <field>APTS_Country__c</field>
            <operation>equals</operation>
            <value>Global</value>
        </filters>
        <label>Global Packing</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_Global_Payment_Method</fullName>
        <columns>NAME</columns>
        <columns>APTS_Code_Used_For__c</columns>
        <columns>APTS_Code__c</columns>
        <columns>APTS_Code_Description__c</columns>
        <columns>APTS_Locale__c</columns>
        <columns>APTS_Country__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Code_Used_For__c</field>
            <operation>equals</operation>
            <value>Payment Method</value>
        </filters>
        <filters>
            <field>APTS_Country__c</field>
            <operation>equals</operation>
            <value>Global</value>
        </filters>
        <label>Global Payment Method</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_Global_Payment_Terms</fullName>
        <columns>NAME</columns>
        <columns>APTS_Code_Used_For__c</columns>
        <columns>APTS_Code__c</columns>
        <columns>APTS_Code_Description__c</columns>
        <columns>APTS_Locale__c</columns>
        <columns>APTS_Country__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Code_Used_For__c</field>
            <operation>equals</operation>
            <value>Payment Term</value>
        </filters>
        <filters>
            <field>APTS_Country__c</field>
            <operation>equals</operation>
            <value>Global</value>
        </filters>
        <label>Global Payment Terms</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_Global_Penalty</fullName>
        <columns>NAME</columns>
        <columns>APTS_Code_Used_For__c</columns>
        <columns>APTS_Code__c</columns>
        <columns>APTS_Code_Description__c</columns>
        <columns>APTS_Locale__c</columns>
        <columns>APTS_Country__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Code_Used_For__c</field>
            <operation>equals</operation>
            <value>Penalty</value>
        </filters>
        <filters>
            <field>APTS_Country__c</field>
            <operation>equals</operation>
            <value>Global</value>
        </filters>
        <label>Global Penalty</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Picklist Table</pluralLabel>
    <recordTypes>
        <fullName>APTS_Global_Master_Picklist_Table</fullName>
        <active>true</active>
        <description>CCP Replacement related record type</description>
        <label>APTS_Global_Master_Picklist_Table</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Valid_Name_Format</fullName>
        <active>true</active>
        <description>Validation rule to enforce user to enter valid name similar to description.</description>
        <errorConditionFormula>AND(Name  &lt;&gt;  APTS_Code_Description__c,
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c),
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c))</errorConditionFormula>
        <errorMessage>Name should be similar to the description.</errorMessage>
    </validationRules>
</CustomObject>